package com.directi.training.isp.exercise_refactored;

public interface ProximityDoor extends Door {
    void proximityCallback();
}
