package com.directi.training.isp.exercise_refactored;

public interface TimeOutDoor extends Door {
    void timeOutCallback();

}
